[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/GUICanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://GUI/theme.tres" type="Theme" id=2]

[node name="GUICanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GUI" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 116.0
margin_bottom = 35.0

[node name="LevelScoreContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_right = 116.0
margin_bottom = 8.0

[node name="ScoreLabel" type="Label" parent="GUI/VBoxContainer/LevelScoreContainer"]
margin_right = 96.0
margin_bottom = 8.0
text = "Level score:"

[node name="ScoreTicker" type="Label" parent="GUI/VBoxContainer/LevelScoreContainer"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 8.0
text = "88"

[node name="TotalScoreContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 12.0
margin_right = 116.0
margin_bottom = 20.0

[node name="ScoreLabel" type="Label" parent="GUI/VBoxContainer/TotalScoreContainer"]
margin_right = 96.0
margin_bottom = 8.0
text = "Total score:"

[node name="ScoreTicker" type="Label" parent="GUI/VBoxContainer/TotalScoreContainer"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 8.0
text = "88"

[node name="TimerContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 24.0
margin_right = 116.0
margin_bottom = 32.0

[node name="TimerLabel" type="Label" parent="GUI/VBoxContainer/TimerContainer"]
margin_right = 40.0
margin_bottom = 8.0
text = "Time:"

[node name="TimerTicker" type="Label" parent="GUI/VBoxContainer/TimerContainer"]
margin_left = 44.0
margin_right = 60.0
margin_bottom = 8.0
text = "88"

[node name="Maincamera" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.6
drag_margin_top = 0.6
drag_margin_right = 0.6
drag_margin_bottom = 0.6
editor_draw_drag_margin = true
